--- a/retail_ai_location_strategy_adk/.env.example
+++ b/retail_ai_location_strategy_adk/.env.example
@@ -1,12 +1,28 @@
 # Retail AI Location Strategy - Environment Configuration
 # Copy this file to .env and fill in your actual values
 
-# Google AI Studio API Key (Required)
-# Get from: https://aistudio.google.com/app/apikey
-GOOGLE_API_KEY=your_google_api_key_here
+# ============================================================================
+# AUTHENTICATION MODE - Choose ONE option below
+# ============================================================================
 
-# IMPORTANT: Set this to FALSE to use AI Studio instead of Vertex AI
+# --------------------------------------
+# OPTION 1: Google AI Studio (for local development)
+# --------------------------------------
+# Get API key from: https://aistudio.google.com/app/apikey
+GOOGLE_API_KEY=your_google_api_key_here
 GOOGLE_GENAI_USE_VERTEXAI=FALSE
+
+# --------------------------------------
+# OPTION 2: Vertex AI (for production deployment)
+# --------------------------------------
+# Uncomment these lines and comment out Option 1 above
+# GOOGLE_CLOUD_PROJECT=your-project-id
+# GOOGLE_CLOUD_LOCATION=us-central1
+# GOOGLE_GENAI_USE_VERTEXAI=TRUE
+
+# ============================================================================
+# REQUIRED FOR ALL MODES
+# ============================================================================
 
 # Google Maps API Key (Required for competitor mapping)
 # Get from: https://console.cloud.google.com/apis/credentials
