--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,9 @@
 # Docs folder
 retail-ai-location-strategy/.docs/
 
-# Blog implementation plan (internal tracking)
+# Blog internal files
 retail-ai-location-strategy/blog/implementation_plan.md
+retail-ai-location-strategy/blog/assets/image-prompts.json
 
 # Python
 __pycache__/
