--- a/retail-ai-location-strategy/app/frontend/package.json
+++ b/retail-ai-location-strategy/app/frontend/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@ag-ui/client": "^0.0.42",
     "@ag-ui/langgraph": "^0.0.20",
-    "@copilotkit/react-core": "^1.10.6",
-    "@copilotkit/react-ui": "^1.10.6",
-    "@copilotkit/runtime": "^1.10.6",
+    "@copilotkit/react-core": "^1.50.0",
+    "@copilotkit/react-textarea": "^1.50.0",
+    "@copilotkit/react-ui": "^1.50.0",
+    "@copilotkit/runtime": "^1.50.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "next": "^14.2.0",
     "react": "^18.2.0",
