feat: add adk-deep-research agent
- Add deep research agent with multi-agent pipeline
- Implements human-in-the-loop plan approval
- Features iterative research with Google Search grounding
- Includes quality evaluation loop with pass/fail grading
- Generates cited reports with automatic source tracking
- Uses SequentialAgent, LoopAgent, and custom BaseAgent patterns

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .env
 .env.*
 !.env.example
+.mcp.json
 
 # Dot folders
 .adk/
@@ -14,6 +15,7 @@
 
 # Docs folder
 retail-ai-location-strategy/.docs/
+adk-deep-research/.docs/
 
 # Blog internal files
 retail-ai-location-strategy/blog/implementation_plan.md
