chore: add campaigns.db for complete clone experience

--- a/ad-campaign-agent/.gitignore
+++ b/ad-campaign-agent/.gitignore
@@ -14,8 +14,8 @@ build/
 app/.adk/
 generated/.adk/
 
-# Database (runtime data)
-*.db
+# Database backups (keep main db tracked)
+*.db.bak
 
 # Documentation (internal plans)
 .docs/
