--- a/ad-campaign-agent/.gitignore
+++ b/ad-campaign-agent/.gitignore
@@ -14,6 +14,9 @@ build/
 app/.adk/
 generated/.adk/
 
+# Archive folder (backups, old scripts, local media)
+.archive/
+
 # Database backups (keep main db tracked)
 *.db.bak
 
