fix: database schema and mock data with real GCS videos
- Fix category constraint bug for Campaign 4 (casual -> essentials)
- Fix lastrowid bug in mock_data.py for INSERT OR IGNORE
- Add real GCS video filenames for all 4 campaigns (10 videos total)
- Add video existence checks in storage.py and review_tools.py
- Update README with Gemini 3 model references
- Update Makefile to use adk web without path argument
- Add *.db to .gitignore (databases are ephemeral)
- Remove tracked app/campaigns.db

--- a/ad-campaign-agent/.gitignore
+++ b/ad-campaign-agent/.gitignore
@@ -17,7 +17,8 @@ generated/.adk/
 # Archive folder (backups, old scripts, local media)
 .archive/
 
-# Database backups (keep main db tracked)
+# Database files (ephemeral, recreated on startup)
+*.db
 *.db.bak
 
 # Documentation (internal plans)
