refactor: restructure experiments and graduate equity research agent
- Move code_execution_01, 02, 03 to experiments/ folder (git-ignored)
- Graduate code_execution_04 to adk-equity-deep-research/ (standalone project)
- Update .gitignore to ignore all .docs/ folders and experiments/
- Update adk-deep-research/CLAUDE.md with new structure
- Experiment 004 marked as GRADUATED in experiment log

--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,11 @@
 !retail-ai-location-strategy/.ai/.claude/
 !retail-ai-location-strategy/.ai/.claude/**
 
-# Docs folder
-retail-ai-location-strategy/.docs/
-adk-deep-research/.docs/
+# Experiments folder (keep local only)
+experiments/
+
+# Docs folders (all .docs/ folders anywhere in the repo)
+.docs/
 
 # Blog internal files
 retail-ai-location-strategy/blog/implementation_plan.md
