refactor: modular restructuring of adk-equity-deep-research
Major restructuring of the equity research agent from monolithic 2336-line
agent.py into clean modular architecture:

- app/schemas/ - 11 Pydantic models across 4 files
- app/sub_agents/ - 17 agents organized by function
- app/callbacks/ - 5 callback functions
- app/tools/ - infographic generation tools
- app/config.py - centralized configuration

Other changes:
- Move adk-deep-research to experiments/ (gitignored)
- Remove generated artifacts from tracking (equity_report.html)
- Add SANDBOX_SETUP.md for sandbox configuration
- Update .gitignore for generated files

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,11 @@ experiments/
 # Docs folders (all .docs/ folders anywhere in the repo)
 .docs/
 
+# Generated artifacts
+equity_report.html
+chart_*.png
+infographic_*.png
+
 # Blog internal files
 retail-ai-location-strategy/blog/implementation_plan.md
 retail-ai-location-strategy/blog/assets/image-prompts.json
