--- a/adk-equity-deep-research/app/.env.example
+++ b/adk-equity-deep-research/app/.env.example
@@ -16,3 +16,7 @@ LOG_LEVEL=INFO
 # Optional: Model Configuration
 # MODEL=gemini-3-flash-preview
 # IMAGE_MODEL=gemini-3-pro-image-preview
+
+# Optional: PDF Export (enabled by default)
+# Set to false to generate HTML report only
+# ENABLE_PDF_EXPORT=true
