feat: migrate data fetchers to yfinance + Google Search hybrid
- Add yfinance tools for structured financial data (statements, valuations, market data, analyst data)
- Add ticker resolver for multi-market support (US, India, Japan, Korea, Europe, China)
- Add rate limiting and caching infrastructure for yfinance API
- Update financial, valuation, and market fetcher agents to use yfinance as primary source
- Keep Google Search as fallback for qualitative data and market-specific metrics
- Update README with Google Cloud requirements, setup steps, and stock disclaimer

--- a/adk-equity-deep-research/requirements.txt
+++ b/adk-equity-deep-research/requirements.txt
@@ -21,6 +21,9 @@ matplotlib
 pandas
 numpy
 
+# Financial data from Yahoo Finance (structured, reliable data)
+yfinance>=0.2.40
+
 # Structured outputs
 pydantic
 
